| Summary: | ASTERISK-27204: [patch] app_queue: Wrong queue stat calculation | ||
| Reporter: | sungtae kim (pchero) | Labels: | |
| Date Opened: | 2017-08-17 16:14:51 | Date Closed: | 2017-08-23 11:04:22 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_queue |
| Versions: | 13.17.2 14.6.2 15.0.0-rc1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When the queue calculates queue's holdtime and talktime for the queue stat, it uses wrong initial info.
To calcaulte queue stat, it uses exponential average formula. Simply, for the first value, it uses average itself. And since the next value it calculates using exponential average formula. holdtime - It does not consider the the first value. - So, every calculation assumes the first holdtime is 0. - Example, if the talktime - it looks like it consider the first value. - But it only in the service level. - The talk time should consider all the call's talk time.. ========================================================= How to reproduce - Reset the queue stat - Make a call to queue. - Wait call until out of service level time. - Agent Call Answer - Hangup - Check the queue stat | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-08-17 16:14:52.044-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: sungtae kim (pchero) 2017-08-17 16:20:20.941-0500 If affects to all the version of Asterisk. By: sungtae kim (pchero) 2017-08-17 17:23:51.366-0500 Submitted patch at here https://gerrit.asterisk.org/#/c/6246/ By: Friendly Automation (friendly-automation) 2017-08-23 11:04:23.932-0500 Change 6255 merged by Jenkins2: app_queue: Fix initial hold time queue statistic [https://gerrit.asterisk.org/6255|https://gerrit.asterisk.org/6255] By: Friendly Automation (friendly-automation) 2017-08-23 11:11:11.474-0500 Change 6256 merged by Jenkins2: app_queue: Fix initial hold time queue statistic [https://gerrit.asterisk.org/6256|https://gerrit.asterisk.org/6256] By: Friendly Automation (friendly-automation) 2017-08-23 11:13:27.545-0500 Change 6257 merged by Jenkins2: app_queue: Fix initial hold time queue statistic [https://gerrit.asterisk.org/6257|https://gerrit.asterisk.org/6257] By: Friendly Automation (friendly-automation) 2017-08-23 11:13:41.182-0500 Change 6246 merged by Jenkins2: app_queue: Fix initial hold time queue statistic [https://gerrit.asterisk.org/6246|https://gerrit.asterisk.org/6246] | ||